[tool.poetry]
name = "authenticator"
version = "0.1.0"
description = ""
authors = ["pavelhardzei <pavelgordei11@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Flask = "^2.0.2"
psycopg2-binary = "^2.9.3"
Flask-SQLAlchemy = "^2.5.1"
gunicorn = "^20.1.0"
Flask-Migrate = "^3.1.0"
Flask-RESTful = "^0.3.9"
flask-marshmallow = "^0.14.0"
marshmallow-sqlalchemy = "^0.27.0"
pyotp = "^2.6.0"
PyJWT = "^2.3.0"

[tool.poetry.dev-dependencies]
pre-commit = "^2.17.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
